--- a/manifest.yml
+++ b/manifest.yml
@@ -12,8 +12,10 @@ applications:
     TARGET_RUNTIME: tomee7
     SET_LOGGING_LEVEL: '{ROOT: INFO, com.sap.cloud.sdk: INFO}'
     JBP_CONFIG_SAPJVM_MEMORY_SIZES: 'metaspace:128m..'
+    destinations: [{name: 'ErpQueryEndpoint', url: 'https://mockserver-friendly-hedgehog.cfapps.eu10.hana.ondemand.com'}]
 #  services:
 #  - my-application-logs
 #  - my-xsuaa
 #  - my-destination
 #  - my-connectivity
+#test
